# Obtain-time-series-from-Aquarius-ReportRunner.exe

./: .gitignore  .ruff.toml  README.md  main.py  pyproject.toml  requirements.txt
_tools/: Get-TimeSeries.psm1  fun_s.R  fun_s.py  fun_s_pl.py
info/: param_info.csv  param_info.json  plate_info.csv  plate_info.json
scripts/: daily_hydro_over_20_years.ps1  request_from_Rachel.ps1
scripts/R/: 1_run_after_pwsh_script.R  1_run_after_pwsh_script_dt.R  _update_param_site.R
scripts/duckdb/: 1_run_after_pwsh_script.sql  1_run_after_pwsh_script_duckdb_in_general.sql
scripts/python/: 1_run_after_pwsh_scrip.py  1_run_after_pwsh_script_pd.py  1_run_after_pwsh_script_pl.py  _update_param_site.py
